--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,9 @@ img {
 
 /* Header */
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 20;
   background-color: #FF7247;
 }
 
@@ -77,7 +80,7 @@ img {
 .nav {
   display: flex;
   justify-content: space-between;
-  padding: 33px 0;
+  padding: 20px 0;
   align-items: center;
 }
 
@@ -264,7 +267,7 @@ img {
 
 /* Advantages */
 .advantages {
-  padding-top: 110px;
+  padding-top: 125px;
   padding-bottom: 300px;
   background-color: rgba(130, 142, 237, 0.19);
   background-image: url(../img/wave-down.svg);
